apps/apps/heimdall-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall
  labels:
    app.kubernetes.io/name: heimdall
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: heimdall
  ports:
    - name: http
      port: 80
      targetPort: http
