apps/apps/homebox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homebox
  labels:
    app.kubernetes.io/name: homebox
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homebox
  ports:
    - name: http
      port: 7745
      targetPort: http
