apps/apps/changedetection-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: change.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  name: http
    - host: change.prod.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changedetection
                port:
                  name: http
