apps/apps/heimdall-redirects.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: heimdall-redirect-root
  namespace: apps
spec:
  redirectRegex:
    regex: ^https?://(www\.)?romanpeters\.nl/(.*)
    replacement: https://hello.romanpeters.nl/$2
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-root-alias
  namespace: apps
  annotations:
    external-dns: external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
    traefik.ingress.kubernetes.io/router.middlewares: apps-heimdall-redirect-root@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  name: http
    - host: www.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall
                port:
                  name: http
