apps/apps/homebox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homebox
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: homebox.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homebox
                port:
                  name: http
