apps/apps/n8n-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure-int,websecure-ext
spec:
  ingressClassName: traefik
  rules:
    - host: n8n.romanpeters.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  name: http
